# proximal

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: sync-main.yml  test.yml
apps/: cli.py  mcp_server.py
apps/server/: main.py  pipeline.py
core/: pyproject.toml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  plugins.md
guardian/: agent.py  pyproject.toml
scripts/: bootstrap.sh
shared/: automatisch_client.py  pyproject.toml
tests/: README.md  conftest.py  test_agent_collaboration.py  test_agents.py  test_analytics.py  test_api_conversations.py  test_automatisch_client.py  test_calendar_provider.py  test_capabilities.py  test_chronos_profile.py  test_chronos_reactive.py  test_cli.py  test_cli_helpers.py  test_cli_interactive.py  test_conversations.py  test_energy.py  test_estimate_learning.py  test_events.py  test_focusbuddy_execution.py  test_focusbuddy_profile.py  test_guardian_profile.py  test_guardian_reactive.py  test_integration_multiagent.py  test_liaison.py  test_mcp_server.py  test_memory.py  test_mentor_profile.py  test_new_agents.py  test_notifications.py  test_orchestrator.py  test_pipeline.py  test_planner_profile.py  test_profiles.py  test_providers.py  test_proximal.py  test_scheduler.py  test_signal_wiring.py  test_structured.py  test_voice.py  test_wellness_memory.py  (+2 more)
trellis/: pyproject.toml
trellis/apps/: cli.py
trellis/core/: agents.py  memory.py  settings.py
trellis/core/providers/: anthropic_provider.py  openai_provider.py  router.py
trellis/server/: main.py  pipeline.py
