[tool.poetry]
name = "proximal"
version = "0.1.0"
package-mode = false

[project]
name = "trellis-agent"
version = "0.1.0"
requires-python = ">=3.12"
description = "AI agent that converts vague goals into actionable sprints"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.12.0"
pytest = ">=8.2"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
pre-commit = ">=3.7.0"

[tool.ruff]
select = ["ALL"]
ignore = ["ALL"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
workspace = { members = ["core", "trellis", "guardian", "shared"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
