[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proximal"
version = "0.1.0"
requires-python = ">=3.12"
description = "Multi-agent framework for neurodiverse executive functioning support"
readme = "README.md"

dependencies = [
  "pydantic>=2.11",
  "fastapi[all]>=0.115.13",
  "typer[all]>=0.4.0",
  "python-dotenv>=1.0",
  "weaviate-client>=3.26.7,<4.0.0",
  "anthropic>=0.18.0",
  "openai>=1.0.0",
  "langgraph>=0.4.8",
  "httpx>=0.24.0",
  "rich>=13.0.0",
  "pytest>=8.2",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0"
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "mypy",
  "ipykernel",
  "ruff>=0.0.297"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "apps*"]

[project.scripts]
trellis = "apps.cli:app"