[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proximal"
version = "0.2.0"
requires-python = ">=3.12"
description = "Multi-agent framework for neurodiverse executive functioning support"
readme = "README.md"

dependencies = [
  "pydantic>=2.11",
  "pydantic-settings>=2.0",
  "typer[all]>=0.4.0",
  "python-dotenv>=1.0",
  "litellm>=1.0",
  "httpx>=0.24.0",
  "rich>=13.0.0",
  "aiosqlite>=0.19",
]

[project.optional-dependencies]
server = [
  "fastapi[all]>=0.115.13",
  "slowapi>=0.1.9",
  "redis>=5.0.0",
]
mcp = [
  "mcp>=1.0",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.0.297",
  "mypy",
  "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "apps*"]

[project.scripts]
proximal = "apps.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
